k8s/applications/ai/karakeep/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  annotations:
spec:
  clusterIP: None
  selector:
    app: karakeep-web
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
